[package]
name = "mkproj-lib"
version = "0.1.2"
authors = ["mustafif0929@gmail.com <mustafif0929@gmail.com>"]
edition = "2018"
description = "Modules for MKProject Programs"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
